feat: upload ess politics dataset

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Datasets/Personal_and_household_characteristics.csv filter=lfs diff=lfs merge=lfs -text
+Datasets/ESS-Politics.csv filter=lfs diff=lfs merge=lfs -text
