--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,15 @@
 Datasets/Personal_and_household_characteristics.csv filter=lfs diff=lfs merge=lfs -text
 Cleaned/ESS-Politics.csv filter=lfs diff=lfs merge=lfs -text
+datasets filter=lfs diff=lfs merge=lfs -text
+cleaned filter=lfs diff=lfs merge=lfs -text
+datasets/ess/wellbeing.csv filter=lfs diff=lfs merge=lfs -text
+datasets/ess/socio.csv filter=lfs diff=lfs merge=lfs -text
+datasets/ess filter=lfs diff=lfs merge=lfs -text
+datasets/. filter=lfs diff=lfs merge=lfs -text
+*.gitignore filter=lfs diff=lfs merge=lfs -text
+/LICENSE filter=lfs diff=lfs merge=lfs -text
+*.md filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
