--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
-datasets filter=lfs diff=lfs merge=lfs -text
-cleaned filter=lfs diff=lfs merge=lfs -text
-*.csv filter=lfs diff=lfs merge=lfs -text
-*.py -filter -diff -merge text
+Datasets/Personal_and_household_characteristics.csv filter=lfs diff=lfs merge=lfs -text
+Cleaned/ESS-Politics.csv filter=lfs diff=lfs merge=lfs -text
